<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
    >

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/hello"
    android:textSize="22sp"
    android:textColor="@color/warning"
    />

<TextView
    android:text="@string/disclaimer_text"
    android:textSize="18sp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
</TextView>


<TextView
    android:text="@string/blank_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
</TextView>


<Button
    android:id="@+id/accept_button"
    android:textSize="16sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/accept_label"
    android:onClick="sendMessage"
    />


<TextView
    android:text="@string/blank_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<Button
    android:id="@+id/quit_button"
    android:textSize="16sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/quit_label"
    />

</LinearLayout>
