<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        />

    <Button android:id="@+id/bestmix_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bestmix_label"
        android:onClick="showBestmix"/>

    <Button android:id="@+id/mod_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod_label"
        android:onClick="showMod"/>

    <Button android:id="@+id/ppo2_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ppo2_calc_label"
        android:onClick="showPpo2"/>

    <Button android:id="@+id/ead_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ead_label"
        android:onClick="showEad"/>


</LinearLayout>
