<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank_label"
        />
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*">


        <!-- Row 1 -->
        <TableRow>
            <TextView
                android:text="@string/ppo2_label"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textSize="16sp"
                android:typeface="monospace"
                android:textStyle="bold"/>


            <Spinner
                android:id="@+id/spinner"
                android:layout_height="fill_parent"
                android:prompt="@string/ppo2_label"
                android:layout_width="wrap_content"/>



        </TableRow>


        <!-- Row 2 -->
        <TableRow>
            <TextView
                android:text="@string/depth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="normal"/>

            <EditText
                android:id="@+id/depth_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLines="1"
                android:maxLength="3"
                android:text="60"
                />

            <Spinner
                android:id="@+id/fswffwspinner"
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:prompt="@string/fswffw_label" />

        </TableRow>


        <!-- Row 3 is blank -->
        <TableRow>
            <TextView
                android:text="@string/blank_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>


        <!-- Row 4 -->
        <TableRow>
            <TextView
                android:text="@string/mix_label"
                android:textColor="@color/hilite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:layout_gravity="left"
                />

            <TextView
                android:id="@+id/result_field"
                android:text="@string/blank_label"
                android:textColor="@color/hilite"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textSize="21sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:layout_gravity="left"
                android:clickable="false"
                />

            <Button
                android:id="@+id/calc_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_calc_label" />

        </TableRow>


    </TableLayout>

</LinearLayout>

