<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="divemce.com.divecalc.about"
    tools:showIn="@layout/activity_about">


    <TextView
        android:text="@string/about_divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/imageView"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:textAlignment="center" />
    <!-- android:layout_alignParentLeft="true" -->
    <!-- android:layout_alignParentStart="true" -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_dcalc_4"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_line_1"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:id="@+id/textView1"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_line_4"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_line_3"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_line_2"
        android:layout_marginTop="11dp"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
